style/contacts/contact_responsive.css
@media (max-width: 1305px) {
    .contact-display {
        margin-left: 25px;
        margin-top: 110px;
    }

    .h1 {
        font-size: 50px;
    }

    .fullname {
        font-size: 30px;
    }

    .separator-vertical {
        margin: 0px 15px;
    }

    .contact-sub {
        font-weight: 400;
        font-size: 24px;
    }

    .two-letter-name {
        width: 100px;
        height: 100px;
    }
}

@media (min-width: 1150px) {
    #responsivMenu {
        display: none;
    }
}

@media (max-width: 1150px) {
    .contact-display {
        display: none;
        margin-left: 16px;
        margin-top: 48px;
    }

    .cancel-add-btn {
        display: none;
    }

    .contact-main {
        min-width: 320px;
    }

    .sidebar-contacts {
        width: 100%;
        display: flex;
        flex-direction: column-reverse;
        max-height: 100vh;
        min-width: 302px;
    }

    .add-contact-btn-position {
        bottom: 40px;
        left: 630px;
        margin-left: auto;
        margin-top: 20px;
    }

    .add-contact-btn {
        width: 53px;
        border-radius: 50%;
        font-size: 0;
        padding: 10px;
        justify-content: center;
    }

    .add-contact-btn-img {
        margin-left: -7px;
    }

    .contact-list {
        padding: 17px 4%;
    }

    .single-letter {
        padding: 17px 4%;
    }

    .list-user {
        padding-left: 4%;
    }

    .dialog-window {
        padding: 0;
    }

    .dialog-content {
        flex-direction: column;
        min-width: 0;
        height: auto;
        margin: 95px 4%;
    }

    .logo-dialog {
        display: none;
    }

    .main-left {
        padding: 125px 4%;
        display: flex;
        flex-direction: column;
        gap: 12px;
        border-top-right-radius: 30px;
        border-bottom-left-radius: 0;
    }

    .main-right {
        flex-direction: column;
        border-top-right-radius: 0;
        border-bottom-left-radius: 30px;
        min-width: 0;
        padding-left: 4%;
        padding-right: 4%;
    }

    .create-contact-btn {
        margin-top: 12px;
    }

    .position {
        margin: 0;
        position: fixed;
        top: 42%;
        left: 50%;
        translate: -50%;
    }

    .position-edit {
        margin: 0;
        position: fixed;
        top: 37%;
        left: 50%;
        translate: -50%;
    }

    .edit-right {
        padding-top: 60px;
    }

    .subtask-section {
        padding: 10px 10px;
    }

    .close-btn {
        position: fixed;
        top: 1%;
        left: 92%;
        translate: -50%;
    }

    .add-contact-info {
        min-width: 0;
        margin-top: 25px;
        gap: 28px;
    }

    .label-responsiv {
        padding: 12px 3px !important;
    }

    .button-section-contact {
        margin-left: auto;
        margin-right: auto;
    }

    h1 {
        font-size: 35px;
    }

    .contact-sub {
        font-size: 18px;
    }

    .name::after {
        margin-left: -18px;
    }

    .mail::after {
        margin-left: -18px;
    }

    .phone::after {
        margin-left: -18px;
    }

    .two-letter-name {
        width: 100px;
        height: 100px;
    }

    .contact-header-text {
        flex-direction: column;
        align-items: flex-start;
        gap: 16px;
    }

    .separator-vertical {
        border-radius: 3px;
        margin: 0px 0px;
        width: 90px;
        height: 3px;
        order: 3;
    }

    .h1 {
        font-size: 47px;
    }

    .main-name {
        gap: 20px;
        margin-left: 0px;
    }

    .fullname {
        font-size: 30px;
    }

    .go-back-btn {
        display: flex;
    }

    .main-name-btns {
        display: none;
    }

    .sub-header-information {
        margin-top: 20px;
        margin-bottom: 20px;
    }

    .sub-menu-btn {
        display: flex;
    }

    .sub-menu-btns {
        right: 40px;
    }

    .dialog-message {
        position: sticky;
        top: 80%;
        left: 50%;
        translate: -50%;
    }
}


@media (max-width: 767px) {
    .contact-main {
        height: calc(100vh - 168px);
    }

    .sidebar-contacts {
        height: calc(100vh - 150px);
        z-index: 19;
    }

}


@media (max-width: 596px) {
    .sub-menu-btns {
        right: 7%;
    }

    .dialog-message {
        top: 76%;
    }
}

@media (max-width: 560px) {
    .dialog-message {
        translate: -11%;
    }
}

@media (max-width: 470px) {
    .sub-menu-btns {
        right: 8%;
    }
}

@media (max-width: 400px) {
    .main-name {
        gap: 10px;
    }

    .fullname {
        font-size: 23px;
    }

    .sub-menu-btns {
        margin-right: 6px;
    }

    .dialog-content {
        margin: 14px 4%;
    }

    .main-left {
        padding: 80px 4%;
    }

    .position {
        top: 33%;
    }

    .contact-display {
        margin-left: 16px;
        margin-top: 25px;
    }

    .main-right {
        flex: none;
        padding-bottom: 21px;
        padding-top: 24px;
    }

    .position-edit {
        top: 26%;
    }
}

